<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mealDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
...
            android:paddingTop="@dimen/common_vertical_margin"
            android:paddingStart="@dimen/common_horizontal_margin"
            android:paddingEnd="@dimen/common_horizontal_margin"
            android:paddingBottom="@dimen/common_vertical_margin">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:lines="1"
                android:ellipsize="end"
...
